--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "poly_check",
   "version": "0.1.0",
+  "private": true,
   "description": "Simple application to check if an address is inside a polygon",
   "scripts": {
+    "build": "webpack -p",
+    "start": "node server.js",
+    "start:local": "webpack --watch --config webpack.dev.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dawn Richardson",
   "license": "ISC",
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "dotenv-webpack": "^1.8.0"
+  },
   "dependencies": {
     "express": "^4.17.1"
   }
