--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "Dawn Richardson",
   "license": "ISC",
   "devDependencies": {
+    "dotenv-webpack": "^1.8.0",
+    "prettier": "^2.0.5",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "dotenv-webpack": "^1.8.0"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "express": "^4.17.1"
